# edelhome-api

./: Cargo.toml  README.md
graphs/lighting/: Cargo.toml
graphs/lighting/src/: main.rs
libs/hue-rs/: Cargo.toml
libs/hue-rs/examples/: discover.rs
libs/hue-rs/src/: error.rs  lib.rs  result.rs
libs/hue-rs/src/bridge/: discover.rs  error.rs  mod.rs  request.rs  response.rs
models/hue/: Cargo.toml
models/hue/src/: lib.rs  model.rs
