[workspace]
resolver = "2"
members = [
    "models/hue",
    "graphs/lighting",
    "libs/hue-rs"
]

[workspace.dependencies]
async-graphql = "6.0.9"
async-graphql-poem = "6.0.9"
poem = "1.3.58"
tokio = "1.12.0"
tracing-subscriber = "0.3.17"
tracing = "0.1.40"
tracing-core = "0.1.32"
tracing-opentelemetry = "0.21.0"
tracing-futures = "0.2.5"
reqwest = "0.11.22"
serde = "1.0.130"
serde_json = "1.0.107"
serde_yaml = "0.9.25"
opentelemetry = "0.20.0"
opentelemetry-http = "0.9.0"
opentelemetry-otlp = "0.13.0"
thiserror = "1.0.50"
url = "2.4.1"
urlencoding = "2.1.3"
uuid = "1.5.0"